# libmsgm

./: CMakeLists.txt  读我.txt
doc/: 说明.txt
src/: CMakeLists.txt  common.h  debug.h  etah_msgq.h  msgm.c
test/: CMakeLists.txt  etah_modules.h  msg_avserver.h  msg_cfg_man.h  msg_client.c  msg_codec_man.h  msg_init.c  msg_server.c  msg_sys_svr.h  msg_type_all.h
